--- a/part-2-deck-of-cards/index.html
+++ b/part-2-deck-of-cards/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Promises Exercises: Part 2 Deck of Cards</title>
+  <title>Async Exercises: Part 2 Deck of Cards</title>
 </head>
 <body>
   <h1>Deck of Cards</h1>
